--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
         - id: ApplicationMS_kbe
           uri: http://localhost:8082/
           predicates:
-            - Path=/api/laptops/**
+            - Path=/api/v1/laptops/**, /api/v1/getLocationLaptop/**
         - id: CalculatorMS_kbe
           uri: http://localhost:8081/
           predicates:
-            - Path=/api/calculator/**
+            - Path=/api/v1/calculator/**
