--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   cloud:
     gateway:
@@ -6,8 +5,8 @@ spring:
         - id: ApplicationMS_kbe
           uri: http://localhost:8082/
           predicates:
-            - Path=/api/v1/laptops/**, /api/v1/getLocationLaptop/**
+            - Path=/api/v1/laptops/**
         - id: CalculatorMS_kbe
-          uri: http://localhost:8081/
+          uri: http://localhost:8085/
           predicates:
             - Path=/api/v1/calculator/**
